--- a/ApacheLogRev.cabal
+++ b/ApacheLogRev.cabal
@@ -33,4 +33,6 @@ Executable logrev
     text >= 0.11.0.6, time >= 1.2.0.3, unix >= 2.4.2.0,
     base >= 4 && <= 5
   Other-modules:	Data.LogRev.LogStats
+                        Data.LogRev.Parser
+                        Data.LogRev.Processing
                         Graphics.LogRev.Charts
