--- a/ApacheLogRev.cabal
+++ b/ApacheLogRev.cabal
@@ -27,7 +27,7 @@ Executable logrev
   Main-is:		Main.hs
   Extra-Libraries: GeoIP
   Hs-Source-Dirs:	src
-  ghc-options:          -O2 -fforce-recomp
+  ghc-options:          -Wall -O2 -fforce-recomp
   Build-Tools:          hsc2hs
   Build-depends:
     Chart >= 0.15, Chart-gtk >= 0.15, MissingH >= 1.1.0.3,
