--- a/ApacheLogRev.cabal
+++ b/ApacheLogRev.cabal
@@ -27,20 +27,24 @@ Executable logrev
   Main-is:		Main.hs
   Extra-Libraries: GeoIP
   Hs-Source-Dirs:	src
-  ghc-options:          -Wall -O2 -fforce-recomp
+  ghc-options:          -O2
   Build-Tools:          hsc2hs
   Build-depends:
     Chart >= 0.15, Chart-gtk >= 0.15, MissingH >= 1.1.0.3,
     bytestring >= 0.9.1.10, colour >= 2.3.2, containers >= 0.4.0.0,
     data-accessor >= 0.2.2.1, parsec >= 3.1.1, text >= 0.11.0.6,
     time >= 1.2.0.3, unix >= 2.4.2.0, base >= 4 && <= 5,
-    bytestring >= 0.9, deepseq >= 1.1.0.2
+    bytestring >= 0.9, deepseq >= 1.1.0.2, json >= 0.5
   Other-modules:        Data.GeoIP
                         Data.GeoIP.GeoDB
+                        Data.LogRev
                         Data.LogRev.LogStats
                         Data.LogRev.Parser
                         Data.LogRev.Processing
                         Graphics.LogRev.Charts
+                        Proc.LRS
+                        Proc.LRS.Parser
+
   -- ghc-options:          -O2 -Wall
   -- ghc-options:          -rtsopts -auto -auto-all -caf-all -debug -fobject-code -fforce-recomp
 
