--- a/ApacheLogRev.cabal
+++ b/ApacheLogRev.cabal
@@ -27,7 +27,6 @@ Executable logrev
   Main-is:		Main.hs
   Extra-Libraries:      GeoIP
   Hs-Source-Dirs:	src
-  ghc-options:          -O2
   Build-Tools:          hsc2hs
   Build-depends:
     Chart >= 0.15, Chart-gtk >= 0.15, MissingH >= 1.1.0.3,
@@ -44,4 +43,6 @@ Executable logrev
                         Graphics.LogRev.Charts
                         Proc.LRS
                         Proc.LRS.Parser
-  -- ghc-options:       -O2 -Wall -rtsopts -auto-all -auto -caf-all -fobject-code -fforce-recomp
+  ghc-options:          -O2 -fforce-recomp
+  -- ghc-options:       -O2 -Wall -rtsopts -auto-all -caf-all -fobject-code -fforce-recomp -funbox-strict-fields
+
