--- a/ApacheLogRev.cabal
+++ b/ApacheLogRev.cabal
@@ -44,6 +44,5 @@ Executable logrev
                         Proc.LRS
                         Proc.LRS.Parser
   ghc-options:          -O2 -fforce-recomp
-
-  -- ghc-options:       -O2 -Wall -rtsopts -auto-all -caf-all -fobject-code -fforce-recomp -funbox-strict-fields
+  --- ghc-options:          -O2 -rtsopts -auto-all -caf-all -fobject-code -fforce-recomp -funbox-strict-fields
 
