--- a/ApacheLogRev.cabal
+++ b/ApacheLogRev.cabal
@@ -43,6 +43,6 @@ Executable logrev
                         Graphics.LogRev.Charts
                         Proc.LRS
                         Proc.LRS.Parser
-  ghc-options:          -O2 -fforce-recomp
-  --- ghc-options:          -O2 -rtsopts -auto-all -caf-all -fobject-code -fforce-recomp -funbox-strict-fields
+  -- ghc-options:          -O2 -fforce-recomp
+  ghc-options:          -O2 -rtsopts -auto-all -caf-all -fobject-code -fforce-recomp -funbox-strict-fields
 
